# eStatya

./: .dockerignore  .env.old  .env.template  .gitignore  LICENSE  Makefile  README.md  alembic.ini  dev.db  docker-compose.yaml  main.py  prompt.md  promtail-config.yaml  pyproject.toml  self-hosted.yaml  stress_test.sh  test_register.py
.github/: pull_request_template.md
.github/workflows/: development.yaml  development.yml
alembic/: env.py
alembic/versions/: 745739bf3562_add_main_fields.py  ea007653f490_initial_migration_with_users_posts_and_.py
database/: config.py
docker/: Dockerfile
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/docker/: Dockerfile
frontend/src/: App.tsx
frontend/src/api/: admin.ts  auth.ts  client.ts  loki.ts  posts.ts  prometheus.ts
nginx/: default.conf
requirements/: dev.txt
src/: config.py  main.py
src/admin/: dependencies.py  exceptions.py  repository.py  router.py  services.py
src/auth/: config.py  constants.py  dependencies.py  exceptions.py  models.py  provider.py  repositories.py  router.py  schemas.py  services.py  utils.py
src/avatars/: depemdencies.py  exceptions.py  service.py
src/comments/: models.py
src/middlewars/: config.py  exceptions.py  handlers.py
src/posts/: dependencies.py  exceptions.py  models.py  provider.py  repository.py  router.py  schemas.py  services.py
src/s3/: dependencies.py  exceptions.py  services.py
src/tests/: test_error.py  test_health.py
src/users/: dependencies.py  repository.py  router.py  schemas.py  services.py
(+17 files in other folders)
